# derived from David Wheeler's video series
AC_INIT([autotoolstest], [0.01], [x@example.com],
        [autotoolstest], [http://joshpeck.org])
AC_PREREQ([2.68])
AC_CONFIG_SRCDIR([autotoolstest.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])
# [1.11], -Wall, -Werror
AM_INIT_AUTOMAKE()
AC_CONFIG_FILES([Makefile])
AC_PROG_CC
# various checks...
AC_OUTPUT
